--- a/index.html
+++ b/index.html
@@ -6,11 +6,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Document</title>
+    <title>Bookstore</title>
 </head>
 <body>
     <h1>Bookstore</h1>
     <div id="app">
+        <button id="getAllButton" v-on:click="getAllBooks" class="btn btn-primary">Load Books</button>
+
+        <table v-if="books.length > 0" class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Title</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="book in books" :key="book.id">
+                    <td>{{ book.id }}</td>
+                    <td>{{ book.title }}</td>
+                    <td>{{ book.price }}</td>
+                </tr>
+            </tbody>
+        </table>
+        <div v-else>
+            <p>No books available.</p>
+        </div>
 
     </div>
     <script src="index.js"></script>    
