--- a/index.html
+++ b/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Bookstore</title>
 </head>
-<body>
-    <h1>Bookstore</h1>
-    <div id="app">
 
-        <div class="container">
-            <button id="getAllButton" v-on:click="getAllBooks" class="btn btn-primary">Load Books</button>      
-            <table v-if="books.length > 0" class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Title</th>
-                        <th>Price</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="book in books" :key="book.id">
-                        <td>{{ book.id }}</td>
-                        <td>{{ book.title }}</td>
-                        <td>{{ book.price }}</td>
-                    </tr>
-                </tbody>
-            </table>
-            <div v-else>
-                <p>No books available.</p>
-            </div> 
+<body>
+    <div id="app" class="container">
+        <h1>Bookstore</h1>
+
+        <button id="getAllButton" v-on:click="getAllBooks" class="btn btn-primary">Load Books</button>
+
+        <table v-if="books.length > 0" class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Title</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="book in books" :key="book.id">
+                    <td>{{ book.id }}</td>
+                    <td>{{ book.title }}</td>
+                    <td>{{ book.price }}</td>
+                </tr>
+            </tbody>
+        </table>
+        <div v-else>
+            <p>No books available.</p>
         </div>
 
-        <div class="container mt-3">
-            <input v-model="idToGetBy" placeholder="Id" type="number"/>
-            <button id="getByIdButton" v-on:click="getBookById(idToGetBy)" class="btn btn-secondary">Get Book By ID</button>
+        <input v-model="idToGetBy" placeholder="Id" type="number" />
+        <button id="getByIdButton" v-on:click="getBookById(idToGetBy)" class="btn btn-secondary">Get Book By
+            ID</button>
         <table v-if="singleBook != null" class="table table-striped">
             <thead>
                 <tr>
@@ -53,13 +55,13 @@
                     <td>{{ singleBook.price }}</td>
                 </tr>
             </tbody>
-        </table>    
+        </table>
         <div v-else>
             <p>No book found with that ID.</p>
         </div>
-        </div>
 
     </div>
-    <script src="index.js"></script>    
+    <script src="index.js"></script>
 </body>
+
 </html>
